ATS_M : igt@xe_guc_pc@freq_range_idle - dmesg-fail - *ERROR* GuC PC query task state failed: -ENODEV
<6> [613.690362] Console: switching to colour dummy device 80x25
<6> [613.690725] [IGT] xe_guc_pc: executing
<6> [613.720530] xe 0000:4d:00.0: [drm] GT suspended
<7> [613.726585] ast 0000:02:00.0: [drm:drm_client_dev_restore [drm]] fbdev: ret=0
<3> [613.728521] xe 0000:4d:00.0: [drm] *ERROR* GuC PC query task state failed: -ENODEV
<3> [613.729346] xe 0000:4d:00.0: [drm] *ERROR* GuC PC query task state failed: -ENODEV
<6> [613.729829] [IGT] xe_guc_pc: starting subtest freq_range_idle
<3> [613.731503] xe 0000:4d:00.0: [drm] *ERROR* GuC PC set param failed: -ENODEV
<3> [613.731656] xe 0000:4d:00.0: [drm] *ERROR* GuC PC set param failed: -ENODEV
<7> [613.876418] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] Applying GT save-restore MMIOs
<7> [613.877191] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0x8724] = 0x40000000
<7> [613.877834] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0x9424] = 0x7ffffffc
<7> [613.878634] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0x9434] = 0x00020000
<7> [613.879370] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0x9524] = 0x10000000
<7> [613.880077] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0xb0b4] = 0x0a480000
<7> [613.880704] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0xb188] = 0x00000008
<7> [613.881482] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0xcf2c] = 0x00010008
<7> [613.882160] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0xcf30] = 0x00010008
<7> [613.882768] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0xcf34] = 0x00010008
<7> [613.883514] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0xcf38] = 0x00010008
<7> [613.884199] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0xcf54] = 0x00001004
<7> [613.884812] xe 0000:4d:00.0: [drm:xe_reg_sr_apply_mmio [xe]] REG[0xe90c] = 0x00000000
<7> [613.885549] xe 0000:4d:00.0: [drm:xe_wopcm_init [xe]] WOPCM: 4096K
<7> [613.886035] xe 0000:4d:00.0: [drm:xe_wopcm_init [xe]] GuC WOPCM is already locked [1440K, 544K)
<7> [613.898713] xe 0000:4d:00.0: [drm:__xe_guc_upload [xe]] GuC successfully loaded
<7> [613.900107] xe 0000:4d:00.0: [drm:xe_guc_ct_enable [xe]] GuC CT communication channel enabled
<7> [613.902572] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] flag:0x0
<7> [613.903248] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] entries:64
<7> [613.903829] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 0 0xb020 0xd00090
<7> [613.904579] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 1 0xb024 0xb00050
<7> [613.905271] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 2 0xb028 0xb000b0
<7> [613.905836] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 3 0xb02c 0xb000b0
<7> [613.906500] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 4 0xb030 0xb000b0
<7> [613.907072] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 5 0xb034 0xb000b0
<7> [613.907597] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 6 0xb038 0xb000b0
<7> [613.908216] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 7 0xb03c 0xb000b0
<7> [613.908725] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 8 0xb040 0xb000b0
<7> [613.909357] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 9 0xb044 0xb000b0
<7> [613.909884] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 10 0xb048 0xb000b0
<7> [613.910570] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 11 0xb04c 0xb000b0
<7> [613.911170] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 12 0xb050 0xb000b0
<7> [613.911703] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 13 0xb054 0xb000b0
<7> [613.912339] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 14 0xb058 0xb000b0
<7> [613.912866] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 15 0xb05c 0xb000b0
<7> [613.913547] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 16 0xb060 0xb000b0
<7> [613.914143] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 17 0xb064 0xb000b0
<7> [613.914658] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 18 0xb068 0xb000b0
<7> [613.915282] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 19 0xb06c 0xb000b0
<7> [613.915802] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 20 0xb070 0xb000b0
<7> [613.916356] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 21 0xb074 0xb000b0
<7> [613.916758] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 22 0xb078 0xb000b0
<7> [613.917247] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 23 0xb07c 0xb000b0
<7> [613.917649] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 24 0xb080 0xb000b0
<7> [613.918094] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 25 0xb084 0xb000b0
<7> [613.918486] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 26 0xb088 0xb000b0
<7> [613.918877] xe 0000:4d:00.0: [drm:xe_mocs_init [xe]] 27 0xb08c 0xb000b0